--- a/lang/en.json
+++ b/lang/en.json
@@ -701,11 +701,17 @@
     "ConditionsBurning": "Burning",
     "ConditionsCharging":"Charging",
     "ConditionsConfused": "Confused",
+    "ConditionsCoverLight": "Light Cover",
+    "ConditionsCoverMedium": "Medium Cover",
+    "ConditionsCoverHeavy": "Heavy Cover",
     "ConditionsCowering": "Cowering",
     "ConditionsDazed": "Dazed",
     "ConditionsDazzled": "Dazzled",
     "ConditionsDead": "Dead",
     "ConditionsDeafened": "Deafened",
+    "ConditionsDodgeOrd": "Ordinary Dodge",
+    "ConditionsDodgeGoo": "Good Dodge",
+    "ConditionsDodgeAma": "Amazing Dodge",
     "ConditionsDying": "Dying",
     "ConditionsEncumbered": "Encumbered",
     "ConditionsEntangled": "Entangled",
@@ -3872,6 +3878,9 @@
     "StatusDazzled": "Dazzled",
     "StatusDead": "Dead",
     "StatusDeafened": "Deafened",
+    "StatusDodgeOrd": "Ordinary Dodge",
+    "StatusDodgeGoo": "Good Dodge",
+    "StatusDodgeAma": "Amazing Dodge",
     "StatusDying": "Dying",
     "StatusEncumbered": "Encumbered",
     "StatusEntangled": "Entangled",
@@ -3903,7 +3912,10 @@
     "StatusStunned": "Stunned",
     "StatusSwim":"Swimming",
     "StatusSuppressed":"Suppressed",
-    "StatusUnconscious": "Unconscious"
+    "StatusUnconscious": "Unconscious",
+    "StatusCoverLight": "Light Cover",
+    "StatusCoverMedium": "Medium Cover",
+    "StatusCoverHeavy": "Heavy Cover"
     }
 },
 "fat":"Fatigue",
